projects and contact done

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
     "emailjs": "^4.0.1",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-parallax-tilt": "^1.7.117",
+    "react-toastify": "^9.1.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.150.1"
   },
